--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
       <li>Earrings</li>
       <li>Watches</li>
     </ul>
+    <form id="searchbox">
+      <input type="text" placeholder="Search for an item">
+      <button type="submit" class="search">Search</button>
+    </form>
 
     <div id="sort-div">Sort by:
     <div></br></div>
@@ -64,7 +68,7 @@
       </li>
       <li class="col-xs-4">
         <img class="product-img" src="img/gold-heart.png" alt="gold-heart">
-        <span class="product-text">Gold Heart Rind</span>
+        <span class="product-text">Gold Heart Ring</span>
         <span class="product-price">$2,999</span>
       </li>
       <li class="col-xs-4">
